# cloudwatch-macros

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: audit.yml  gate-code.yml
cw-macros/: samconfig.toml  template.yaml
cw-macros/.aws-sam/: build.toml
cw-macros/.aws-sam/cache/f02a9235-5944-4a62-ac89-76784a413182/: bootstrap
cw-macros/get-latest-layer-version-macro/: Cargo.toml
cw-macros/get-latest-layer-version-macro/src/: main.rs
cw-macros/lib/: lib.rs
cw-macros/lower-string-macro/src/: lib.rs  main.rs
cw-macros/max-length-macro/: Cargo.toml
cw-macros/max-length-macro/src/: main.rs
cw-macros/upper-string-macro/src/: main.rs
