[package]
name = "cw-macros"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
aws-config = "0.57.1"
aws-sdk-lambda = "0.35.0"
lambda_runtime = "0.8.2"
serde = "1.0.136"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
